directsoundsrc: Properly pass pLockedBuffer by reference when calling IDirectSoundCaptureBuffer_Lock

https://bugzilla.gnome.org/show_bug.cgi?id=784755